# projectH

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  NUL  PROJECT_CUSTOM_INSTRUCTIONS.md  README.md  ab_compare.py  ab_compare.sh  package-lock.json  pipeline-gui.bat  pipeline-gui.py  pipeline-launcher.py  pipeline-watcher-tmux.sh  pipeline-watcher-v3-logged.sh  pipeline-watcher-v3.sh  pipeline.bat  pyproject.toml  setup-pipeline-v2.sh  setup-pipeline-v3.sh  setup-pipeline.sh  start-pipeline.sh  stop-pipeline.sh  theme-compare.html  verify_fsm.py  watcher_core.py  watcher_dispatch.py  watcher_prompt_assembly.py  watcher_signals.py  watcher_stabilizer.py  watcher_state.py
.pipeline/: README.md  archive-stale-control-slots.sh  cleanup-old-smoke-dirs.sh  codex_feedback.md  current_run.json  smoke-cleanup-lib.sh  smoke-implement-blocked-auto-triage.sh  smoke-three-agent-arbitration.sh
_data/: __init__.py  job_linker.py  token_collector.py  token_link_audit.py  token_schema.sql  token_store.py
app/: README.md  errors.py  localization.py  main.py  serializers.py  web.py
checklist/: pipeline-startup-and-handoff-checklist.md
config/: runtime_hosts.py  settings.py
controller/: index.html  monitor.py  pipeline-office-rpg-prototype.html  server.py  test.html
core/: README.md  agent_loop.py  approval.py  contracts.py  delta_analysis.py  eval_contracts.py  models.py  operator_executor.py  request_intents.py  source_policy.py  web_claims.py
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  CONFIG_VARIANTS.md  LOCAL_FIRST_POLICY.md  MILESTONES.md  NEXT_STEPS.md  (+5 more)
(+4761 files in other folders)
